--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "babel-core": "6.23.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "6.3.1",
-    "babel-preset-es2015": "6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-0": "6.22.0",
     "css-loader": "0.26.1",
     "eslint": "3.15.0",
     "eslint-plugin-react": "6.9.0",
-    "node-sass": "4.5.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "6.0.0",
-    "sockjs-client": "^1.1.2",
+    "sockjs-client": "^1.3.0",
     "style-loader": "0.13.1",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
