--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-0": "6.22.0",
-    "css-loader": "0.26.1",
+    "css-loader": "^3.0.0",
     "eslint": "3.15.0",
     "eslint-plugin-react": "6.9.0",
     "node-sass": "^4.12.0",
@@ -42,7 +42,7 @@
     "sockjs-client": "^1.3.0",
     "style-loader": "0.13.1",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "react": "15.4.2",
